RESOLVED FIXED208897
Non-unified build fixes early March 2020 edition
https://bugs.webkit.org/show_bug.cgi?id=208897
Summary Non-unified build fixes early March 2020 edition
Don Olmstead
Reported 2020-03-10 17:02:51 PDT
Letting the days go by (same as it ever was) Same as it ever was (same as it ever was) Letting the days go by (same as it ever was) Same as it ever was
Attachments
Patch (4.54 KB, patch)
2020-03-10 17:28 PDT, Don Olmstead
no flags
Don Olmstead
Comment 1 2020-03-10 17:28:54 PDT
WebKit Commit Bot
Comment 2 2020-03-10 19:41:04 PDT
Comment on attachment 393188 [details] Patch Clearing flags on attachment: 393188 Committed r258248: <https://trac.webkit.org/changeset/258248>
WebKit Commit Bot
Comment 3 2020-03-10 19:41:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-03-10 19:42:19 PDT
Darin Adler
Comment 5 2020-03-15 11:59:42 PDT
Comment on attachment 393188 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393188&action=review > Source/WebCore/dom/BoundaryPoint.h:28 > +#include "Node.h" it’s a pretty big change to BoundaryPoint.h, causing to pull in all of Node.h. It obviates the need for BoundaryPoint.cpp entirely since that was the only thing different driving us to not have all functions be inlines. How did you determine this was needed, and couldn’t be fixed by adding includes elsewhere?
Note You need to log in before you can comment on or make changes to this bug.