Source/WebCore/Modules/mediacontrols/MediaControlsHost.h
@@ -28,7 +28,9 @@
 #if ENABLE(MEDIA_CONTROLS_SCRIPT)
 
 #include <wtf/RefCounted.h>
+#include <wtf/RefPtr.h>
 #include <wtf/Variant.h>
+#include <wtf/WeakPtr.h>
 
 namespace WebCore {
 
